# pvprog

./: .gitignore  README.md  discussion.txt  measurements.csv
colorfilter/: .gitignore  Makefile  main.c
heatmap/: CMakeLists.txt  heatmap  heatmap.cpp  heatmap_old.cpp  heatmap_random_3.csv  heatmap_singleThreaded.cpp  lifecycle.h  makefile  output.txt  utils.h  validator.task3.1.py
heatmap-cuda/: coords.csv  cudaSample  cudaSample.cu  heatmap.cu  heatmap.h  heatmap_random_1000.csv  lifecycle.h  main.cu  main.h  makefile  utils.cpp  utils.cu  utils.h  validator.py
heatmap-omp/: CMakeLists.txt  heatmap.h  main.cpp  makefile  output.txt  utils.cpp
heatmap2/: CMakeLists.txt  heatmap  heatmap.cpp  heatmap.h  hotspots.csv  lifecycle.cpp  main.cpp  main.h  utils.cpp
mcpi/: CMakeLists.txt  Makefile  karpFlattMetric.cpp  karpFlattMetric.h  makefile  mcpi.cpp  measurement.cpp  measurement.h  measurements.csv  readme  runTest.sh  test_measurement.csv  validator.task3.3.py
mcpi/mcpi/: CMakeLists.txt  mcpi.cpp  mcpi.h
mycst/: .gitignore  README.md  build.gradle  settings.gradle
mycst/src/main/java/: MyCST.java
mycst/src/main/resources/: credentials.json-TEMPLATE
myct/: README.md  myct.sh  myct_isolation.sh  myct_run_limits.sh  run_test_calls.sh
myct/test/: cpu_test.sh  limit_test.sh  memory_test.sh
